# CivicTechJobs

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING  CONTRIBUTING.md  Design-System-Developer.md  Lead-Developer.md  Makefile  QA-Developer.md  README.md  alias-config.txt  alias.sh  docker-compose.dev.yml  docker-compose.docs.yml  docker-compose.lint.yml  docker-compose.stage.yml  docker-compose.staging.yml  docker-compose.yml  index.html  jsconfig.json  package-lock.json  package.json  requirements.txt  sitemap.xml  webpack.config.js
.github/: pull_request_template.md
app/: README.md  entrypoint.sh  jest.config.js  manage.py  package-lock.json  package.json  requirements.txt  (+3 more)
backend/: .dockerignore  .env.dev  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  docker-compose.yml  entrypoint.sh  openapi-schema.yml  pyproject.toml  requirements.txt  setup.cfg  startServer.sh
backend/api/: asgi.py  settings.py  urls.py  wsgi.py
backend/backend/: settings.py  urls.py  views.py
backend/backend/templates/backend/: dev-mode.html
backend/config/: settings.py  urls.py
backend/ctj_api/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/ctj_api/migrations/: 0001_initial.py  0002_alter_communityofpractice_practice_area_and_more.py  0002_communityofpractice_project_role_skill.py
backend/ctj_api/tests/: test_api_endpoints.py
backend/ctjbackend/: apps.py  models.py  uptime.py  urls.py  views.py
backend/ctjbackend/fixtures/: opportunities_data.json
backend/ctjbackend/migrations/: 0001_initial.py
backend/frontend/: urls.py
backend/frontend/templates/frontend/: index.html
backend/server/: apps.py  models.py  serializers.py  settings.py  tests.py  urls.py  views.py
backend/server/migrations/: 0002_test.py  0004_post.py
backend/templates/: index.html
backend/tests/components/: Calendar.test.js
(+494 files in other folders)
