[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.2"
django-vite = "^3.0.4"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[tool.isort]
profile = "black"
include_trailing_comma = true
known_third_party = ["django"]
skip_glob="env/*"
extend_skip_glob="**/migrations"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
